--- a/npm/recipe.yml
+++ b/npm/recipe.yml
@@ -22,18 +22,12 @@
 
 
 tasks:
-  - name: installing nodejs package
-    homebrew:
-      name: "{{ item }}"
-      state: present
-    with_items:
-      - node
-    when: ansible_os_family == "Darwin"
+  # TODO: Add macOS support
 
-  - name: installing nodejs package
+  - name: Installing npm packages
     apt:
       name: "{{ item }}"
       state: present
     with_items:
-      - nodejs
+      - npm
     when: ansible_os_family == "Debian"
